# ORM_HW21

./: manage.py  pyproject.toml
ORM_HW/: asgi.py  settings.py  urls.py  wsgi.py
ORM_HW/static/js/: bootstrap.bundle.js
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blogapp/: models.py  views.py
blogapp/templates/blog/: base.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blogapp/templates/blogapp/: base.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  home.html  product_detail.html
main/templatetags/: media_filters.py  media_tags.py
